# ATLAS

./: .env.example  README.md  pyproject.toml
api/: auth.py  config.py  main.py
api/middleware/: logging.py  rate_limit.py
api/routers/: admin.py  chat.py  documents.py  search.py  stats.py
api/schemas/: chat.py  document.py  stats.py
core/: __init__.py  bit_packing.py  db.py  polar_quant.py  precompute.py  qjl.py  turboquant.py
core/tests/: test_turboquant.py
docker/: Dockerfile.backend  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/chat/: ChatWindow.tsx  ContextBar.tsx  MessageBubble.tsx  SourceCitations.tsx  StreamingCursor.tsx
frontend/components/dashboard/: ActivityFeed.tsx  CompressionGauge.tsx  IndexStats.tsx  MemoryWaterfall.tsx  StatCard.tsx
frontend/lib/: api.ts  types.ts
ingestion/: chunker.py  dedup.py  embedder.py  pipeline.py
ingestion/parsers/: docx_parser.py  email_parser.py  pdf_parser.py  txt_parser.py  url_parser.py
kv_engine/: attention_patch.py  kv_cache.py  vllm_integration.py
kv_engine/tests/: test_kv_compression.py
scripts/: atlas_cli.py  benchmark_turboquant.py  build_index.py  download_models.py  generate_backend.py  generate_frontend.py  migrate_db.py
vector_engine/: __init__.py  index.py  search.py  storage.py
vector_engine/tests/: test_index.py  test_search_accuracy.py
(+5 files in other folders)
